<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="save_max">Set max power saving freq in KHz (600MHz=600000KHz)</string>
    <string name="frandom">Enable frandom module</string>
    <string name="zram">Enable/disable zram</string>
    <string name="text_dialog">Keep empty for default value.</string>
    <string name="start">Swipe right to begin!</string>
    <string name="t_boost">Touch Booster</string>
    <string name="enabled">Enabled</string>
    <string name="log">Logger</string>
    <string name="disabled">Disabled</string>
    <string name="app_name">CoCore Manager</string>  
    <string name="action_settings">Settings</string>
    <string name="governor">Governor</string>
    <string name="ioscheduler">I/O scheduler</string>
    <string name="congestion">TCP Congestions</string>
    <string name="max_frequency">Max. clock freq.</string> 
    <string name="min_frequency">Min. clock freq.</string>    
    <string name="deep">Set the deepest sleep state</string>
    <string name="charge">Charging voltages</string>
    <string name="tparam">TouchScreen Parameters</string>
    <string name="pp">Mali PP scheduler</string>
    <string name="fsync">Fsync</string>
    <string name="swap" translatable="false">SWAP</string>
    <string name="vold_mess" translatable="false">Do you want to invert partitions? Then it will autoreboot the device.</string>
    <string name="invert" translatable="false">Invert partitions</string>
    <string name="invert_sum" translatable="false">Switch internal memory with the external sd card. Reboot is required.</string>
    <string name="mmc">Disable SPI CRC</string>   
    <string name="malideb">Set Mali debug level</string>
    <string name="malideb_on">Mali debug level: 0</string>
    <string name="malideb_off">Mali debug level: 2 (default)</string>
    <string name="malimax">Set mali max reads level</string>
    <string name="malidriv">Use only Mali sw render</string>
    <string name="malidriv_sum_off">Both mali and android</string>
    <string name="malidriv_sum_on">Only Mali</string>
    <string name="crt">CRT-OFF animation</string>
     <string name="sdcard">Increase sd card cache to 2048kb</string> 
    <string name="lmk">Low Memory Killer Parameters</string>   
    <string name="sweep">SweepToWake</string>    
    <string name="touchtowake">TouchToWake</string>    
    <string name="led">Touchkeys led</string>  
    <string name="pref_usb_category" translatable="false">USB</string>   
    <string name="wifi">Wifi FAST/MAX mode</string>
    <string name="wifi_on">PM_MAX mode active</string>
    <string name="wifi_off">PM_FAST mode active</string>
    <string name="uksm">UKSM</string>  
    <string name="gpu_oc">GPU overclock</string>
    <string name="night_mode">Night Mode</string>
    <string name="usbshare">USB power sharing</string>    
    <string name="usbswitch">USB switcher</string>    
    <string name="lcdclk">S6E63M0 LCDCLK</string>
    <string name="titleguide">READ HERE IF SOMETHING IS NOT CLEAR.</string>
    <string name="real_charge">Real Charge Notification</string>
    <string name="changelog" translatable="false" >13/06:\n-Added OTA service, big thanks to KINGBABASULA\n-Auto check for updates when you open app\n-Fixed lmk value restoring on boot\n-Code optimized\n-Layout changes\n-Translations updated\n-Option to reset all to defaults\n-Added night mode(only working on last cocore version)\n-Updated some paths\n\n01/06:\n-Edited CPU layout, added min cpu frequency\n-Fixed tcp congestion, edited layout\n-Translations updated\n-Added changelog\n -Code cleaned \n\n 06/08: \n-Added greek, portuguese translations \n-Fixed night mode \n-Layout changes \n\n 29/08: \n-Fixed wifi force close \n-If you open cpu fragment for first time, it will set \'ondemand\' as default governor, \'noop\' as default scheduler, 1 gHz and 100 mHz as default max and min frequencies</string> 
    <string name="changelog_menu_item" translatable="false">Changelog</string>
    <string name="credits" translatable="false">Credits</string>
<string name="drawer_open">Open navigation drawer</string>
<string name="drawer_close">Close navigation drawer</string>
<string name="guide">"\nFSYNC: is an android capability that allows the system to write continuously data from ram to flash to avoid data loss due to a sudden shoutdown. It is enabled by default, if you have a stable system you can also disable it because it can improve performance (less writing by cpu, less battery using, better performance!) It's at your risk! \n\n 
 -SWEEPTOWAKE/TOUCHTOWAKE: these allow you to wake up your device by swiping/touching the screen when it is off. These features causes wakelock so you'll have a worse battery backup. \n\n 
 WIFI MODE: FAST or MAX MODE? FAST mode is used by default and it guarantee max wifi speed, instead of MAX mode that saves battery life and reduce wifi quality. \n\n 
 -TCP CONGESTIONS: these are about 3g speed, choose the one that is better for you, the best one is different due to the environment! \n\n 
 UKSM: stands for ULTRA KERNEL SAMEPAGE MERGING and in less words it reduce the use of ram by the system. \n\n 
 -SPI CRC: don't know exactly what is, but you'll have 10% performance more by disabling it. But be careful, it causes random crashes! \n\n 
 -REAL CHARGE NOTIFICATION: It shows if the battery is real charged or not. \n\n 
 -LOGGER: It disable or enable the system log capability, may speed system. \n\n 
 -SD AHEAD: Increase the cache size from 128kb to 2048 to improve the sd rw speed operations. \n\n 
 -S6E63M0 LCDCLK: It sets the screen refresh framerate, default is 60Hz. \n\n</string>
<string name="thanks" translatable="false">Me HASTALAFIESTA, BOOTMGR, KINGBABASULA</string>  
 <string name="ota" translatable="false">CoCoreManger OTA</string>  
  <string name="ota_tap">Tap here to check it right now</string>
  <string name="uptodate">Latest version installed.</string>
  <string name="ota_quest">Update available \n Current version: &#160;</string>
  <string name="ota_quest2">New version: &#160;</string>
  <string name="down">Downloading&#8230;</string>
  <string name="btn_tap">Tap to download &amp; install</string>
    <string-array name="titles">
        <item>HOME</item>
        <item>PERFORMANCE</item>
        <item>MALI</item>
        <item>BATTERY</item>
        <item>CPU</item>
        <item>DISPLAY</item>
        <item>MISC</item>
        <item>NET</item>
        <item>GUIDE</item>
    </string-array>
    
</resources>
