<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">   
    <CheckBoxPreference  android:title="@string/log" android:key="log" android:summaryOn= "@string/enabled" android:summaryOff="@string/disabled" android:layout="@layout/checkbox_pref"/>
    <CheckBoxPreference  android:title="@string/invert" android:key="vold" android:summary="@string/invert_sum" android:layout="@layout/checkbox_pref"/>    
    <CheckBoxPreference  android:title="@string/sdcard" android:key="sdcard" android:summaryOn= "@string/enabled" android:summaryOff="@string/disabled" android:layout="@layout/checkbox_pref"/>
    <com.hasta.cocoremanager.ListPref  android:title="@string/lmk" android:key="lmk" android:entries="@array/lmk_name" android:entryValues="@array/lmk_val" android:defaultValue="0" android:layout="@layout/checkbox_pref"/>
    <PreferenceCategory android:title="@string/pref_usb_category">
    <CheckBoxPreference  android:title="@string/usbshare" android:key="usb_share" android:summaryOn= "@string/enabled" android:summaryOff="@string/disabled" android:layout="@layout/checkbox_pref"/>
    <CheckBoxPreference  android:title="@string/usbswitch" android:key="usb_switch" android:summaryOn= "@string/enabled" android:summaryOff="@string/disabled" android:layout="@layout/checkbox_pref"/>
    </PreferenceCategory>
</PreferenceScreen>